Refactor imports and update test assertions to use `getFirst()` for improved readability and consistency.